--- a/plugins/org.eclipse.fordiac.ide.images/fordiacimages.properties
+++ b/plugins/org.eclipse.fordiac.ide.images/fordiacimages.properties
@@ -98,6 +98,12 @@ ICON_TRANSACTION=service_transaction.png
 ICON_TRIGGER_EVENT=trigger_event.png
 ICON_TYPE_NAVIGATOR=fb_type_library.png
 ICON_WATCHES_VIEW=watchlist_view.gif
+ICON_WATCHPOINT=watchpoint.png
+ICON_WATCHPOINT_DISABLED=watchpoint_disabled.png
+ICON_WATCHPOINT_DISABLED_OVERLAY=watchpoint_disabled_overlay.png
+ICON_WATCHPOINT_FORCE_DISABLED_OVERLAY=watchpoint_force_disabled_overlay.png
+ICON_WATCHPOINT_FORCE_OVERLAY=watchpoint_force_overlay.png
+ICON_WATCHPOINT_OVERLAY=watchpoint_overlay.png
 ICON_WATCH_INTERFACE_ELEMENTS=insp_sbook.gif
 ICON_ZOOM_100=zoom100.png
 ICON_ZOOM_PAGE=zoompage.png
