Use annotation type lookup for graphical annotations

--- a/plugins/org.eclipse.fordiac.ide.model.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.model.ui/plugin.xml
@@ -19,4 +19,25 @@
 
 <plugin>
    <extension-point id="openListener" name="openListener" schema="schema/openListener.exsd"/>
+   <extension
+         point="org.eclipse.ui.editors.annotationTypes">
+      <type
+            markerSeverity="2"
+            markerType="org.eclipse.fordiac.ide.model.problem"
+            name="org.eclipse.fordiac.ide.model.ui.annotation.error"
+            super="org.eclipse.ui.workbench.texteditor.error">
+      </type>
+      <type
+            markerSeverity="1"
+            markerType="org.eclipse.fordiac.ide.model.problem"
+            name="org.eclipse.fordiac.ide.model.ui.annotation.warning"
+            super="org.eclipse.ui.workbench.texteditor.warning">
+      </type>
+      <type
+            markerSeverity="0"
+            markerType="org.eclipse.fordiac.ide.model.problem"
+            name="org.eclipse.fordiac.ide.model.ui.annotation.info"
+            super="org.eclipse.ui.workbench.texteditor.info">
+      </type>
+   </extension>
 </plugin>
