--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/plugin.xml
@@ -56,4 +56,10 @@
 			name="Watch">
 		</breakpoint>
 	</extension>
+	<extension
+		point="org.eclipse.core.runtime.preferences">
+		<initializer
+			class="org.eclipse.fordiac.ide.deployment.debug.preferences.DeploymentDebugPreferenceInitializer">
+		</initializer>
+	</extension>
 </plugin>
