Reworked AdapterFB Handling
With this change the adapterFB reference of any adapter declaration is
always providing the correct adapterFB independent if it is a CFB or
other FBs.

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -722,3 +722,4 @@ _UI_Demultiplexer_isConfigured_feature = Is Configured
 _UI_Demultiplexer_visibleChildren_feature = Visible Children
 _UI_MemberVarDeclaration_type = Member Var Declaration
 _UI_MemberVarDeclaration_parentNames_feature = Parent Names
+_UI_AdapterDeclaration_interfaceOnlyAdapterFB_feature = Interface Only Adapter FB
