Implementation of new Simple Function Block standard (#678)
* add new simple EC states to model
* updated xml import and export
* updated c++ export
* changed validation
* updated existing templates and added new ones with init event

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -723,3 +723,12 @@ _UI_Demultiplexer_visibleChildren_feature = Visible Children
 _UI_MemberVarDeclaration_type = Member Var Declaration
 _UI_MemberVarDeclaration_parentNames_feature = Parent Names
 _UI_AdapterDeclaration_interfaceOnlyAdapterFB_feature = Interface Only Adapter FB
+_UI_SimpleECAction_type = Simple EC Action
+_UI_SimpleECState_type = Simple EC State
+_UI_SimpleECAction_algorithm_feature = Algorithm
+_UI_SimpleECAction_output_feature = Output
+_UI_SimpleECAction_simpleECState_feature = Simple EC State
+_UI_SimpleECState_simpleECActions_feature = Simple EC Actions
+_UI_SimpleECState_inputEvent_feature = Input Event
+_UI_SimpleECState_simpleFBType_feature = Simple FB Type
+_UI_SimpleFBType_simpleECStates_feature = Simple EC States
