Adapted "No Change" option in refactoring preview (#711)
* Disabled AbstractCommandChange when NO_CHANGE is selected
* Do not display NO_CHANGE to the user
* Removed ErrorMarker creation from ManipulatorChange
* Refactored Changes
* Introcued common base class for LTK changes

--- a/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.xml
@@ -709,6 +709,7 @@
 		 <instanceof value="org.eclipse.fordiac.ide.typemanagement.refactoring.delete.SafeFBTypeDeletionChange$DeleteInternalFBChange"/>
 		 <instanceof value="org.eclipse.fordiac.ide.typemanagement.refactoring.delete.UpdateUntypedSubappPinChange"/>
 		 <instanceof value="org.eclipse.fordiac.ide.typemanagement.refactoring.ReconnectPinChange"/>
+		 <instanceof value="org.eclipse.fordiac.ide.typemanagement.refactoring.UpdateManipulatorChange"/>
          </or>
          </enablement>
       </changePreviewViewer>
