--- a/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.ui/plugin.xml
@@ -581,6 +581,15 @@
              id="org.eclipse.fordiac.ide.structuredtextalgorithm.ui.keyword_STAlgorithm">
        </keywordReference>
     </page>
+    <page
+          category="org.eclipse.fordiac.ide.structuredtextalgorithm.STAlgorithm"
+          class="org.eclipse.fordiac.ide.structuredtextalgorithm.ui.STAlgorithmExecutableExtensionFactory:org.eclipse.fordiac.ide.structuredtextcore.ui.editor.STCoreEditorPreferencePage"
+          id="org.eclipse.fordiac.ide.structuredtextalgorithm.ui.editor"
+          name="Editor">
+       <keywordReference
+             id="org.eclipse.fordiac.ide.structuredtextcore.ui.keyword_STCore">
+       </keywordReference>
+    </page>
  </extension>
  <extension
        point="org.eclipse.xtext.builder.participant">
