--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/plugin.xml
@@ -625,6 +625,15 @@
              id="org.eclipse.fordiac.ide.structuredtextcore.ui.keyword_STCore">
        </keywordReference>
     </page>
+    <page
+          category="org.eclipse.fordiac.ide.structuredtextcore.STCore"
+          class="org.eclipse.fordiac.ide.structuredtextcore.ui.STCoreExecutableExtensionFactory:org.eclipse.fordiac.ide.structuredtextcore.ui.editor.STCoreEditorPreferencePage"
+          id="org.eclipse.fordiac.ide.structuredtextcore.ui.editor"
+          name="Editor">
+       <keywordReference
+             id="org.eclipse.fordiac.ide.structuredtextcore.ui.keyword_STCore">
+       </keywordReference>
+    </page>
  </extension>
  <extension
        point="org.eclipse.ltk.core.refactoring.renameParticipants">
