Refactor callable interface in model
Add signature and varargs to callable interface in model, change
parameter lists to typed element, implement full type name for ST
variables, and migrate ST annotations from Xtend to Java.

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -732,3 +732,5 @@ _UI_SimpleECState_simpleECActions_feature = Simple EC Actions
 _UI_SimpleECState_inputEvent_feature = Input Event
 _UI_SimpleECState_simpleFBType_feature = Simple FB Type
 _UI_SimpleFBType_simpleECStates_feature = Simple EC States
+_UI_TextFunction_varargs_feature = Varargs
+_UI_TextMethod_varargs_feature = Varargs
