Added New 4diac IDE Project and New Type Wizard to main Toolbar
Cleaned and harmonized externalized strings.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
@@ -1,18 +1,63 @@
-pluginName=SystemManagement Plugin
-providerName=Profactor
+###############################################################################
+# Copyright (c) 2008, 2024 Profactor GmbH, Primemetals Austria GmbH,
+#                          Primetals Technologies Austria GmbH
+# 
+# This program and the accompanying materials are made available under the
+# terms of the Eclipse Public License 2.0 which is available at
+# http://www.eclipse.org/legal/epl-2.0.
+#
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#   Gerhard Ebenhofer
+#     - initial API and implementation and/or initial documentation
+#   Michael Oberlehner - added messages for system file refresh
+#   Patrick Aigner - added messages for standard library selection
+###############################################################################
+pluginName=System Management UI
+Bundle-Vendor = Eclipse 4diac
+
+AutomationSystemEditor_ShowingFirstApplication=Showing first application.
+AutomationSystemEditor_ShowingSystem=Showing system.
+AutomationSystemEditor_CouldNotLoadSystem=Could not load system: {0}\! \nCheck if file exists and is correct\!
+
+MissingExportBuilderMarkerResolution_Description=Add 4diac Export Builder to project configuration
+MissingExportBuilderMarkerResolution_Label=Add 4diac Export Builder
+
 
 # Wizard descriptions
-newSystemWizardDesc=Creates a new 4diac IDE Project
-wizard.name.0 = 4diac IDE Project...
-wizard.description.0 = Creates a new 4diac IDE Project
-newsystemwizard.name = System...
-newsystemwizard.description = Creates a new System
-view.name.0 = System Manager
+New4diacProjectWizard_WizardName=New 4diac IDE Project
+New4diacProjectWizard_WizardTitle=4diac IDE Project
+New4diacProjectWizard_WizardDesc=Create a new 4diac IDE Project
+
+New4diacProjectWizard_LibPageName=4diac IDE Project System Libraries
+New4diacProjectWizard_LibPageTitle=4diac IDE Project System Libraries
+New4diacProjectWizard_LibPageDesc=Select the system libraries for new project
+New4diacProjectWizard_InitialSystemName=Initial system name
+New4diacProjectWizard_InitialApplicationName=Initial application name
+New4diacProjectWizard_SystemNameNotValid = System name is not a valid Identifier
+New4diacProjectWizard_DirectoryWithProjectNameAlreadyExistsInWorkspace=Directory with selecting project name already exists in workspace\!
+
+
+NewSystemWizardPage_CreateNewSystem=Create a new System
+NewSystemWizard_ShowAdvanced = &Advanced >>
+NewSystemWizard_HideAdvanced = << &Advanced
+
+NewSystemWizardPage_NewSystemName = New IEC 61499 System
+NewSystemWizardPage_Title = IEC 61499 System
+NewSystemWizard.description = Create a new IEC 61499 System
+
+OpenApplicationForEditing=Open application for editing when done
+
 SystemExplorer.name = System Explorer
-Bundle-Name.0 = Ui Plug-in
-Bundle-Vendor.0 = Eclipse 4diac
 4DIAC_IDE_Category = 4diac IDE
 
 SystemExplorer_Refresh=Refresh
+SystemExplorerNewActionProvider_New=&New
 
 SystemEditor.name=IEC 61499 System Editor
+
+
+SystemEditor_Applications=Applications:
+SystemEditor_SystemConfiguration=System Configuration:
+SystemEditor_SystemInformation=System Information:
