Add find action override in variables view for evaluator debugging
Add an override for the find action in the variables view to also search
not previously expanded/loaded variables for evaluator debugging.

--- a/plugins/org.eclipse.fordiac.ide.debug.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui/plugin.xml
@@ -1,141 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
-         point="org.eclipse.debug.ui.launchShortcuts">
-      <shortcut
-            class="org.eclipse.fordiac.ide.debug.ui.fb.FBLaunchShortcut"
-            icon="platform:/plugin/org.eclipse.fordiac.ide.images/images/fb_type_run.png"
-            id="org.eclipse.fordiac.ide.debug.ui.fbLaunchShortcut"
-            label="Evaluate FB Type"
-            modes="run, debug">
-         <contextualLaunch>
-            <contextLabel
-                  label="Run FB Type"
-                  mode="run">
-            </contextLabel>
-            <contextLabel
-                  label="Debug FB Type"
-                  mode="debug">
-            </contextLabel>
-            <enablement>
-               <with
-                     variable="selection">
-                  <count
-                        value="1">
-                  </count>
-                  <iterate>
-                     <adapt
-                           type="org.eclipse.core.resources.IResource">
-                        <or>
-                           <test
-                                 property="org.eclipse.fordiac.ide.typemanagement.fbType"
-                                 value="SimpleFBType">
-                           </test>
-                           <test
-                                 property="org.eclipse.fordiac.ide.typemanagement.fbType"
-                                 value="BasicFBType">
-                           </test>
-                           <test
-                                 property="org.eclipse.fordiac.ide.typemanagement.fbType"
-                                 value="FunctionFBType">
-                           </test>
-                        </or>
-                     </adapt>
-                  </iterate>
-               </with>
-            </enablement>
-         </contextualLaunch>
-      </shortcut>
-   </extension>
-   <extension
-         point="org.eclipse.debug.ui.launchConfigurationTabGroups">
-      <launchConfigurationTabGroup
-            class="org.eclipse.fordiac.ide.debug.ui.fb.FBLaunchConfigurationTabGroup"
-            id="org.eclipse.fordiac.ide.debug.ui.fbLaunchConfigurationTabGroup"
-            type="org.eclipse.fordiac.ide.debug.fbLaunch">
-         <launchMode
-               mode="run">
-         </launchMode>
-         <launchMode
-               mode="debug"
-               perspective="org.eclipse.debug.ui.DebugPerspective">
-         </launchMode>
-      </launchConfigurationTabGroup>
-   </extension>
-   <extension
-         point="org.eclipse.debug.ui.launchConfigurationTypeImages">
-      <launchConfigurationTypeImage
-            configTypeID="org.eclipse.fordiac.ide.debug.fbLaunch"
-            icon="platform:/plugin/org.eclipse.fordiac.ide.images/images/fb_type_run.png"
-            id="org.eclipse.fordiac.ide.debug.ui.launchConfigurationTypeImageFB">
-      </launchConfigurationTypeImage>
-   </extension>
-   <extension
-         point="org.eclipse.debug.ui.debugModelPresentations">
-      <debugModelPresentation
-            class="org.eclipse.fordiac.ide.debug.ui.EvaluatorDebugModelPresentation"
-            id="org.eclipse.fordiac.ide.debug.model">
-      </debugModelPresentation>
-   </extension>
-   <extension
-         point="org.eclipse.core.runtime.adapters">
-      <factory
-            class=""
-            adaptableType="org.eclipse.core.resources.IResource">
-         <adapter
-               type="org.eclipse.debug.ui.actions.ILaunchable">
-         </adapter>
-      </factory>
-   </extension>
 	<extension
-         point="org.eclipse.ui.views">
-      <view
-            class="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
-            icon="fordiacimage://ICON_FB"
-            id="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
-            name="FB Debug"
-            restorable="true">
-      </view>
-   </extension>
+		point="org.eclipse.debug.ui.launchShortcuts">
+		<shortcut
+			class="org.eclipse.fordiac.ide.debug.ui.fb.FBLaunchShortcut"
+			icon="platform:/plugin/org.eclipse.fordiac.ide.images/images/fb_type_run.png"
+			id="org.eclipse.fordiac.ide.debug.ui.fbLaunchShortcut"
+			label="Evaluate FB Type"
+			modes="run, debug">
+			<contextualLaunch>
+				<contextLabel
+					label="Run FB Type"
+					mode="run">
+				</contextLabel>
+				<contextLabel
+					label="Debug FB Type"
+					mode="debug">
+				</contextLabel>
+				<enablement>
+					<with
+						variable="selection">
+						<count
+							value="1">
+						</count>
+						<iterate>
+							<adapt
+								type="org.eclipse.core.resources.IResource">
+								<or>
+									<test
+										property="org.eclipse.fordiac.ide.typemanagement.fbType"
+										value="SimpleFBType">
+									</test>
+									<test
+										property="org.eclipse.fordiac.ide.typemanagement.fbType"
+										value="BasicFBType">
+									</test>
+									<test
+										property="org.eclipse.fordiac.ide.typemanagement.fbType"
+										value="FunctionFBType">
+									</test>
+								</or>
+							</adapt>
+						</iterate>
+					</with>
+				</enablement>
+			</contextualLaunch>
+		</shortcut>
+	</extension>
+	<extension
+		point="org.eclipse.debug.ui.launchConfigurationTabGroups">
+		<launchConfigurationTabGroup
+			class="org.eclipse.fordiac.ide.debug.ui.fb.FBLaunchConfigurationTabGroup"
+			id="org.eclipse.fordiac.ide.debug.ui.fbLaunchConfigurationTabGroup"
+			type="org.eclipse.fordiac.ide.debug.fbLaunch">
+			<launchMode
+				mode="run">
+			</launchMode>
+			<launchMode
+				mode="debug"
+				perspective="org.eclipse.debug.ui.DebugPerspective">
+			</launchMode>
+		</launchConfigurationTabGroup>
+	</extension>
+	<extension
+		point="org.eclipse.debug.ui.launchConfigurationTypeImages">
+		<launchConfigurationTypeImage
+			configTypeID="org.eclipse.fordiac.ide.debug.fbLaunch"
+			icon="platform:/plugin/org.eclipse.fordiac.ide.images/images/fb_type_run.png"
+			id="org.eclipse.fordiac.ide.debug.ui.launchConfigurationTypeImageFB">
+		</launchConfigurationTypeImage>
+	</extension>
+	<extension
+		point="org.eclipse.debug.ui.debugModelPresentations">
+		<debugModelPresentation
+			class="org.eclipse.fordiac.ide.debug.ui.EvaluatorDebugModelPresentation"
+			id="org.eclipse.fordiac.ide.debug.model">
+		</debugModelPresentation>
+	</extension>
+	<extension
+		point="org.eclipse.core.runtime.adapters">
+		<factory
+			class=""
+			adaptableType="org.eclipse.core.resources.IResource">
+			<adapter
+				type="org.eclipse.debug.ui.actions.ILaunchable">
+			</adapter>
+		</factory>
+		<factory
+			adaptableType="org.eclipse.fordiac.ide.debug.EvaluatorDebugStackFrame"
+			class="org.eclipse.fordiac.ide.debug.ui.actions.EvaluatorDebugViewActionProviderFactory">
+			<adapter
+				type="org.eclipse.debug.internal.ui.viewers.model.provisional.IViewActionProvider">
+			</adapter>
+		</factory>
+	</extension>
+	<extension
+		point="org.eclipse.ui.views">
+		<view
+			class="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
+			icon="fordiacimage://ICON_FB"
+			id="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
+			name="FB Debug"
+			restorable="true">
+		</view>
+	</extension>
 	<extension
 		point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension targetID="org.eclipse.debug.ui.DebugPerspective">
-         <view
-               id="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
-               minimized="false"
-               ratio="0.75f"
-               relationship="bottom"
-               relative="org.eclipse.ui.navigator.ProjectExplorer">
-         </view>
-      </perspectiveExtension>
-      <perspectiveExtension
-            targetID="org.eclipse.fordiac.ide.typemanagement.perspective">
-         <actionSet
-               id="org.eclipse.debug.ui.launchActionSet">
-         </actionSet>
-         <actionSet
-               id="org.eclipse.debug.ui.debugActionSet">
-         </actionSet>
-      </perspectiveExtension>
-   </extension>
-   <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            category="org.eclipse.fordiac.ide.preferences.FordiacPreferencePage"
-            class="org.eclipse.fordiac.ide.debug.ui.preferences.FordiacDebugPreferencePage"
-            id="org.eclipse.fordiac.ide.debug.ui.preferences.FordiacDebugPreferencePage"
-            name="Debug">
-      </page>
-   </extension>
-   <extension
-         point="org.eclipse.core.runtime.adapters">
-      <factory
-            adaptableType="org.eclipse.fordiac.ide.debug.EvaluatorDebugVariable"
-            class="org.eclipse.fordiac.ide.debug.ui.EvaluatorWatchExpressionFactory">
-         <adapter
-               type="org.eclipse.debug.ui.actions.IWatchExpressionFactoryAdapter">
-         </adapter>
-      </factory>
-   </extension>
+		<perspectiveExtension targetID="org.eclipse.debug.ui.DebugPerspective">
+			<view
+				id="org.eclipse.fordiac.ide.debug.ui.view.FBDebugView"
+				minimized="false"
+				ratio="0.75f"
+				relationship="bottom"
+				relative="org.eclipse.ui.navigator.ProjectExplorer">
+			</view>
+		</perspectiveExtension>
+		<perspectiveExtension
+			targetID="org.eclipse.fordiac.ide.typemanagement.perspective">
+			<actionSet
+				id="org.eclipse.debug.ui.launchActionSet">
+			</actionSet>
+			<actionSet
+				id="org.eclipse.debug.ui.debugActionSet">
+			</actionSet>
+		</perspectiveExtension>
+	</extension>
+	<extension
+		point="org.eclipse.ui.preferencePages">
+		<page
+			category="org.eclipse.fordiac.ide.preferences.FordiacPreferencePage"
+			class="org.eclipse.fordiac.ide.debug.ui.preferences.FordiacDebugPreferencePage"
+			id="org.eclipse.fordiac.ide.debug.ui.preferences.FordiacDebugPreferencePage"
+			name="Debug">
+		</page>
+	</extension>
+	<extension
+		point="org.eclipse.core.runtime.adapters">
+		<factory
+			adaptableType="org.eclipse.fordiac.ide.debug.EvaluatorDebugVariable"
+			class="org.eclipse.fordiac.ide.debug.ui.EvaluatorWatchExpressionFactory">
+			<adapter
+				type="org.eclipse.debug.ui.actions.IWatchExpressionFactoryAdapter">
+			</adapter>
+		</factory>
+	</extension>
 </plugin>
