Fix project configuration of ST parser meta-model
There were problems with resolving the EMF meta-model of Xtext grammars
in the ST parser. The Xtext grammar seems to require that EMF meta-model
projects also have the Xtext project nature and builder present, even
though they themselves have no Xtext resources.

This adds back the required Xtext project nature to the ST algorithm and
function projects. It also removes the obsolete xtend-gen folder in the
global constants model project, which was causing warnings in the log.

--- a/plugins/org.eclipse.fordiac.ide.globalconstantseditor.model/build.properties
+++ b/plugins/org.eclipse.fordiac.ide.globalconstantseditor.model/build.properties
@@ -1,5 +1,4 @@
-source.. = src-gen/,\
-           xtend-gen/
+source.. = src-gen/
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
