Add stub export builder for 4diac IDE projects
Add a stub builder for exporting 4diac IDE types to new 4diac IDE
projects.

--- a/plugins/org.eclipse.fordiac.ide.export/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.export/plugin.xml
@@ -3,5 +3,16 @@
 <plugin>
    <extension-point id="org.eclipse.fordiac.ide.export.openCompareEditor" name="openCompareEditor" schema="schema/org.eclipse.fordiac.ide.export.openCompareEditor.exsd"/>
    <extension-point id="org.eclipse.fordiac.ide.export.exportFilter" name="exportFilter" schema="schema/org.eclipse.fordiac.ide.export.exportFilter.exsd"/>
-   <extension-point id="org.eclipse.fordiac.ide.export.language.supportFactory" name="Language Export Support Factory" schema="schema/org.eclipse.fordiac.ide.export.language.supportFactory.exsd"/>   
+   <extension-point id="org.eclipse.fordiac.ide.export.language.supportFactory" name="Language Export Support Factory" schema="schema/org.eclipse.fordiac.ide.export.language.supportFactory.exsd"/>
+   <extension
+         id="builder"
+         name="4diac Export Builder"
+         point="org.eclipse.core.resources.builders">
+      <builder
+            hasNature="true">
+         <run
+               class="org.eclipse.fordiac.ide.export.builder.ExportBuilder">
+         </run>
+      </builder>
+   </extension>   
 </plugin>
