Add configuration and validation for 4diac project nature
Add configuration and validation for 4diac project nature to include
Xtext nature and export builder.

--- a/plugins/org.eclipse.fordiac.ide.model/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.model/plugin.xml
@@ -265,6 +265,17 @@
     <persistent
           value="false">
     </persistent>
+ </extension>
+ <extension
+       id="projectConfiguration"
+       name="4diac IDE Project Configuration Problem"
+       point="org.eclipse.core.resources.markers">
+    <super
+          type="org.eclipse.fordiac.ide.model.problem">
+    </super>
+    <persistent
+          value="false">
+    </persistent>
  </extension>  
  <extension
        id="library"
